[package]
name = "lorenz-cli"
version = "0.1.1"
edition = "2024"
description = "Plots lorenz attractor in terminal."
license = "MIT OR Apache-2.0"
repository = "https://github.com/dhruvkjain/lorenz-cli"
documentation = "https://docs.rs/lorenz-cli"
keywords = ["rust", "plot", "lorenz"]
categories = ["science", "visualization"]
readme = "README.md"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
